--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -41,3 +41,4 @@
 @import "components/_header";
 @import "components/_image-text-one-column";
 @import "components/_watermark";
+@import "components/_video-quote";
