--- a/styles/components/_accordion.scss
+++ b/styles/components/_accordion.scss
@@ -19,6 +19,7 @@
     justify-content: space-between;
     padding: 1.438rem 0;
     font-size: inherit;
+    font-family: inherit;
 
     &::after {
       content: '';
