WATERMARK/MENU - Increase watermark z-index and reduce menu items spacing

--- a/styles/components/_menu-main.scss
+++ b/styles/components/_menu-main.scss
@@ -10,7 +10,7 @@
     text-align: center;
 
     @include media-breakpoint-up(sm) {
-      margin-bottom: $grid-gutter-width * 2;
+      margin-bottom: 60px;
     }
 
     &:last-child {
