VIDEO - Prevent click to mute when scrolled

--- a/styles/components/_header-2036.scss
+++ b/styles/components/_header-2036.scss
@@ -355,5 +355,9 @@ $curve: cubic-bezier(.63,.72,.79,.98);
     .pretitle {
       margin-bottom: 15px;
     }
+
+    video {
+      pointer-events: none;
+    }
   }
 }
