--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -38,7 +38,8 @@ $font-family-serif: 'Ampersand', serif !default;
 $rem-in-px: 16px !default;
 $font-size-base: 1.125rem !default; // 18px
 $font-size-xs: $font-size-base * 0.667; // 12px
-$font-size-sm: $font-size-base * .875 !default;
+$font-size-xsm: $font-size-base * 0.78 !default; // 14px
+$font-size-sm: $font-size-base * 0.875 !default; // 15.75px
 $font-size-lg: $font-size-base * 1.222 !default; // 22px
 $font-size-xlg: $font-size-base * 1.333 !default; // 24px
 $font-size-xxlg: $font-size-base * 1.556 !default; // 28px
