--- a/styles/components/_menu-main.scss
+++ b/styles/components/_menu-main.scss
@@ -6,11 +6,11 @@
   height: 100%;
 
   .menu-main__link {
-    margin-bottom: $grid-gutter-width;
+    margin-bottom: 2rem;
     text-align: center;
 
     @include media-breakpoint-up(sm) {
-      margin-bottom: 60px;
+      margin-bottom: 3rem;
     }
 
     &:last-child {
@@ -24,5 +24,9 @@
         opacity: .6;
       }
     }
+  }
+
+  .menu-main__cta {
+    margin-bottom: 1rem;
   }
 }
