--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -16,6 +16,7 @@ $spacers: (
 
 $grid-breakpoints: (
         xs: 0,
+        xsm: 375px,
         sm: 576px,
         md: 768px,
         lg: 992px,
