--- a/styles/components/_intro.scss
+++ b/styles/components/_intro.scss
@@ -55,11 +55,25 @@
 
   .mute_button {
     position: absolute;
-    bottom: 50px;
-    right: 30px;
+    bottom: 18px;
+    right: 24px;
     z-index: 101;
-    width: 64px;
-    height: 64px;
+
+    .icon-button {
+      width: 48px;
+      height: 48px;
+    }
+
+
+    @include media-breakpoint-up(sm) {
+      bottom: 50px;
+      right: 30px;
+
+      .icon-button {
+        width: 64px;
+        height: 64px;
+      }
+    }
   }
 
   video {
