EAEC-1: Fix regression on video size

--- a/styles/components/_component-media-with-expansion.scss
+++ b/styles/components/_component-media-with-expansion.scss
@@ -29,7 +29,7 @@
       display: table;
 
 
-      > div {
+      > div:not(.video-vimeo) {
         height: 100%;
         width: 100%;
         object-fit: contain;
