EAEC-4: Correct video button showing up on page

--- a/styles/components/_intro.scss
+++ b/styles/components/_intro.scss
@@ -59,6 +59,11 @@
     right: 24px;
     z-index: 101;
 
+    .is-transitioning &,
+    .blocked & {
+      display: none;
+    }
+
     .icon-button {
       width: 48px;
       height: 48px;
