HOTFIX - Set normal whitespace on 2036 title expanded

--- a/styles/components/_header-2036.scss
+++ b/styles/components/_header-2036.scss
@@ -401,6 +401,7 @@ $curve: cubic-bezier(.63,.72,.79,.98);
       @extend .header-xlarge;
       line-height: 0.9em;
       letter-spacing: 0;
+      white-space: normal;
     }
 
     .title_expanded {
