EAEC-7: Add ProfileGrid component

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -42,3 +42,4 @@
 @import "components/_image-text-one-column";
 @import "components/_watermark";
 @import "components/_video-quote";
+@import "components/_profile-grid";
