--- a/styles/embla.scss
+++ b/styles/embla.scss
@@ -39,13 +39,14 @@
   width: 100%;
 
   &:before{
-
-    filter: drop-shadow(0.1px 0.1px 0.1px grey) blur(10px);
+    position: absolute;
+    left: 0;
+    top: 0;
+    content: " ";
+    filter: drop-shadow(1px 1px 1px rgba(grey, 0.33));
     opacity:0;
     content: ' ';
-    //transition: background $scroll-down-transition-duration ease-in-out;
     transition: opacity $main-carousel-transition-duration ease-in-out;
-                // filter math.div($main-carousel-transition-duration , 2) linear;
 
     background-position-x: 38% !important;
     background-position-y:  calc(100vh / 40) !important;
