--- a/styles/components/_component-media-with-expansion.scss
+++ b/styles/components/_component-media-with-expansion.scss
@@ -21,8 +21,8 @@
 
     .close-popup {
       position: absolute;
-      right: math.div($default-separation, 2);
-      top: math.div($default-separation, 2);
+      top: 18px;
+      right: 28px;
     }
 
     figure {
