EAEC-18 - Disable style for arrows transition

--- a/styles/embla.scss
+++ b/styles/embla.scss
@@ -282,8 +282,9 @@ body.is-scrolled {
   &.transitioning,
   &.blocked {
     .embla__button{
-      opacity: 0.4;
-      cursor: not-allowed;
+      // Not required because the carousel is working without blocking.
+    //  opacity: 0.4;
+    //  cursor: not-allowed;
     }
   }
 }
