EAEC-27: Make images bigger and don't downscale

--- a/styles/components/_component-media-with-expansion.scss
+++ b/styles/components/_component-media-with-expansion.scss
@@ -28,6 +28,8 @@
     figure {
       display: table;
       max-height: 50vh;
+      max-width: map-get($container-max-widths, 'md');
+
 
       video{
         max-width: 900px;
