--- a/styles/_atoms.scss
+++ b/styles/_atoms.scss
@@ -9,20 +9,26 @@
   margin: 0 auto;
   transition: $default-transition;
 
-  &:hover {
+  &:hover, &:focus {
     box-shadow: $default-box-shadow--hover;
   }
 }
 
-button{
-  &:focus-visible{
+button {
+  &:focus-visible {
     outline: auto 1px;
   }
 }
+
 a {
   color: inherit;
-  text-decoration: none;
+  text-decoration: underline;
   display: inline-block;
+  transition: opacity .2s ease-out;
+
+  &:hover, &:focus {
+    opacity: .6;
+  }
 }
 
 // Buttons
@@ -50,6 +56,7 @@ a {
 }
 
 .link-button {
+  text-decoration: none;
   border-radius: 20px/50%;
   background-color: $color_white;
   box-shadow: $default-box-shadow;
@@ -59,7 +66,8 @@ a {
   font-size: $font-size-xs;
   letter-spacing: 0.15em;
 
-  &:hover {
+  &:hover, &:focus {
+    opacity: 1;
     box-shadow: $default-box-shadow--hover;
   }
 
@@ -120,6 +128,7 @@ a {
   position: fixed;
   top: 5px;
   right: 5px;
+  z-index: 1;
 
   @include media-breakpoint-up(sm) {
     top: 18px;
