--- a/styles/_atoms.scss
+++ b/styles/_atoms.scss
@@ -114,11 +114,17 @@ a {
   left: 0;
   width: 100%;
   height: 100vh;
-  padding: $default-separation;
-  overflow-y: auto;
+  padding-top: $default-separation;
+  padding-bottom: $default-separation;
 
   @supports not ((-webkit-backdrop-filter: none) or (backdrop-filter: none)) {
     background-color: rgba($color_white, .95);
+  }
+
+  // Avoid CLOSE X menu overlapping text via a very specific media query
+  @media (max-height: 900px) and (max-width: 1000px) {
+    padding-top: $default-separation * 2;
+    padding-bottom: $default-separation * 2;
   }
 }
 
