--- a/styles/components/_menu-secondary.scss
+++ b/styles/components/_menu-secondary.scss
@@ -1,12 +1,12 @@
 .menu-schools {
-  padding-top: $spacer * 2;
+  padding: 0 24px;
 
   @include media-breakpoint-up(md) {
     display: flex;
     width: 100%;
     height: 100%;
     align-items: center;
-    padding-top: 0;
+    padding: 0;
 
     &:before {
       content: '';
@@ -57,6 +57,7 @@
       text-decoration: none;
       position: relative;
       text-align: center;
+      display: inline;
 
       &::after {
         content: "";
