EAEC-19: Remove school link underlines on small screens
when the menu links wrap, the underline is offcenter.

--- a/styles/components/_menu-secondary.scss
+++ b/styles/components/_menu-secondary.scss
@@ -71,6 +71,10 @@
         transform: translate(-50%, 0);
         left: 50%;
         transition: width .2s ease-out;
+
+        @media (max-width: 480) {
+          display: none;
+        }
       }
 
       &:hover, &:focus {
