--- a/styles/components/_component-intro-text.scss
+++ b/styles/components/_component-intro-text.scss
@@ -24,4 +24,10 @@
       margin-left: -16.66666667%;
     }
   }
+
+  .text-container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+  }
 }
